--- a/config.json
+++ b/config.json
@@ -34,7 +34,20 @@
 	            "vendor/bootstrap-sass/assets/javascripts/bootstrap/transition.js",
 	            "vendor/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js",
 	            "vendor/bootstrap-sass/assets/javascripts/bootstrap/popover.js", 
-	            "src/js/*.js"
+	            "src/js/master.js",
+	            "src/js/search.js"
+			]
+		},
+		"back": {
+			"path": [
+				"vendor/selectivity/dist/selectivity-full.min.js",
+
+				"vendor/quill/dist/quill.min.js",
+
+				"vendor/bootstrap-fileinput/js/fileinput.min.js",
+				"vendor/bootstrap-fileinput/js/fileinput_locale_fr.js",
+
+	            "src/js/backend.js"
 			]
 		}
 	}
