--- a/assets/package.json
+++ b/assets/package.json
@@ -22,6 +22,7 @@
     "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
+    "gulp-uncss": "^1.0.1",
     "jshint-stylish": "^1.0.1",
     "minimist": "^1.1.1"
   }
