--- a/assets/package.json
+++ b/assets/package.json
@@ -1,29 +1,9 @@
 {
-  "name": "theme-minetop",
-  "version": "0.0.1",
-  "description": "Theme for minetop",
-  "author": "Metrakit<contact@jordane.net>",
-  "dependencies": {},
-  "license": "MIT",
+  "private": true,
   "devDependencies": {
-    "browser-sync": "^2.5.0",
-    "crypto": "0.0.3",
-    "gulp": "^3.8.11",
-    "gulp-clean": "^0.3.1",
-    "gulp-concat": "^2.5.2",
-    "gulp-if": "^1.2.5",
-    "gulp-jshint": "^1.9.4",
-    "gulp-json-transform": "^0.2.0",
-    "gulp-minify-css": "^1.0.0",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.0.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-ruby-sass": "^1.0.1",
-    "gulp-sass": "^1.3.3",
-    "gulp-sourcemaps": "^1.5.1",
-    "gulp-uglify": "^1.1.0",
-    "gulp-uncss": "^1.0.1",
-    "jshint-stylish": "^1.0.1",
-    "minimist": "^1.1.1"
+    "browser-sync": "2.5.0",
+    "gulp": "3.8.8",
+    "laravel-elixir": "0.18.6",
+    "laravel-elixir-browsersync": "0.1.0"
   }
 }
