--- a/assets/config.json
+++ b/assets/config.json
@@ -56,7 +56,8 @@
 				"./vendor/bootstrap-fileinput/js/fileinput_locale_fr.js"
 			],
 			"custom": [
-	            "src/public/js/backend.js"
+	            "src/public/js/backend.js",
+	            "src/public/js/quill_video_module.js"
 			]
 		}
 	}
