--- a/assets/bower.json
+++ b/assets/bower.json
@@ -16,6 +16,7 @@
     "bootstrap-sass": "~3.3.4",
     "bootstrap-fileinput": "^4.1.8",
     "quill": "^0.19.10",
-    "selectivity": "*"
+    "selectivity": "*",
+    "chartjs": "1.0.2"
   }
 }
