--- a/assets/config.json
+++ b/assets/config.json
@@ -37,7 +37,13 @@
 	            "./vendor/bootstrap-sass/assets/javascripts/bootstrap/tab.js",             
 	            "./vendor/bootstrap-sass/assets/javascripts/bootstrap/transition.js",
 	            "./vendor/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js",
-	            "./vendor/bootstrap-sass/assets/javascripts/bootstrap/popover.js"
+	            "./vendor/bootstrap-sass/assets/javascripts/bootstrap/popover.js",
+	            "./vendor/chartjs/src/Chart.Core.js",
+	            "./vendor/chartjs/src/Chart.Bar.js",
+	            "./vendor/chartjs/src/Chart.Doughnut.js",
+	            "./vendor/chartjs/src/Chart.Line.js",
+	            "./vendor/chartjs/src/Chart.PolarArea.js",
+	            "./vendor/chartjs/src/Chart.Radar.js"
 			],
 			"custom": [
 	            "src/public/js/master.js",
