--- a/assets/bower.json
+++ b/assets/bower.json
@@ -17,6 +17,7 @@
     "bootstrap-fileinput": "^4.1.8",
     "quill": "^0.19.10",
     "selectivity": "*",
-    "chartjs": "1.0.2"
+    "chartjs": "1.0.2",
+    "jquery-unveil": "1.3.0"
   }
 }
