--- a/assets/package.json
+++ b/assets/package.json
@@ -3,7 +3,6 @@
   "devDependencies": {
     "browser-sync": "2.5.0",
     "gulp": "3.8.8",
-    "laravel-elixir": "1.0.1",
-    "laravel-elixir-browsersync": "0.1.0"
+    "laravel-elixir": "1.0.1"
   }
 }
